# stateful-abac-policy-engine

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.withui  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  init_manifest.py  manifest.example.json  manifest_example.json  pyproject.toml
alembic/: env.py
alembic/back_versions/: 0a8b4719fad6_auth_runner.py  1305ecc80b4d_fix_get_authorized_resources_function.py  146870ccf5ed_auto_partition.py  159053421df2_add_sync_groups_to_keycloak_config.py  1b8c3d630775_fix_acl_r_alias_bug.py  21668530a95d_remove_temporary_realm_tables.py  2dd87038dfeb_audit_log.py  374dcd9107e4_add_is_active_and_realm_resource_realm_.py  431deb21615f_external_integration.py  446cd5ee7d19_acl_compiler.py  4710ef224a8e_enhanced_spatial_formats.py  49ac7dc8a1d3_optimize_acl_resolution.py  69bf31d48969_1_init.py  69e2357e1a54_spatial_acl_compiler.py  8d653be14d29_initial_tables.py  9d5b10607907_add_public_access_and_fix_acl.py  a1b2c3d4e5f6_enable_hybrid_acls.py  b4822f96b141_update_compile_acl_for_3857.py  b778fb01b0af_fix_acl_check_constraint_for_pk.py  bcf4b510bd8b_partitioned_tables.py  d808a294638b_add_acl_gatekeeper_logic.py  e8f9a6c4d2b1_add_realm_keycloak_config.py  f7601bb2bc7d_add_external_resource_ids_to_.py  fea3f9cbc372_add_external_id_to_realm_resource.py
alembic/versions/: 130e5b6db576_add_type_level_acl_short_circuit_.py  1_init.py  2_auth_indexes.py  3_auth_resource_filter.py  58055ca375cf_add_get_authorization_conditions_.py  5_get_permitted_actions_batch.py  9d31f60a6f49_add_public_key_and_algorithm_to_.py  add_not_operator.py
app/: README.md  main.py
app/api/: deps.py
app/api/v1/: auth.py  manifest.py  meta.py  realms.py
auth-sync-tool/: README.md  config.example.yaml  config.schema.json  config.test.yaml  pyproject.toml
auth-sync-tool/src/stateful_abac_sync/: __init__.py  cli.py
auth-sync-tool/src/stateful_abac_sync/config/: loader.py  schema.py
auth-sync-tool/src/stateful_abac_sync/db/: __init__.py  connector.py
auth-sync-tool/src/stateful_abac_sync/generator/: manifest.py
auth-sync-tool/tests/: test_cli.py  test_config.py  test_generator.py
common/: models.py  pyproject.toml
common/application/: acl_service.py  action_service.py  auth_service.py  manifest_service.py  realm_service.py  resource_type_service.py
common/core/: config.py
common/schemas/: auth.py  realm_api.py
common/services/: cache.py  context_builder.py  security.py
python-sdk/: README.md  pyproject.toml
python-sdk/src/stateful_abac_sdk/: __init__.py  config.py  exceptions.py  lookup.py  models.py
python-sdk/src/stateful_abac_sdk/clients/: __init__.py  base.py  db.py  factory.py  http.py
python-sdk/src/stateful_abac_sdk/db_managers/: __init__.py  acls.py  actions.py  auth.py  base.py  principals.py  realms.py  resource_types.py  resources.py  roles.py
python-sdk/src/stateful_abac_sdk/interfaces/: __init__.py
python-sdk/src/stateful_abac_sdk/managers/: __init__.py  acls.py  actions.py  auth.py  base.py  principals.py  realms.py  resource_types.py  resources.py  roles.py
python-sdk/src/stateful_abac_sdk/manifest/: __init__.py  builder.py  constants.py  export.py
python-sdk/tests/: test_manifest_builder.py
stateful_abac_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  debug_manifest_json.py  test_abac_flow.py  test_acl_priority.py  test_advanced_acl_conditions.py  test_advanced_scenarios.py  test_api_resource_srid.py  test_auth_todos.py  test_auto_cache_invalidation.py  test_cache_invalidation.py  test_db_connection.py  test_external_integration.py  test_get_authorization_conditions.py  test_hybrid_acls.py  test_keycloak_sync_groups.py  test_metadata.py  test_missing_attributes.py  test_multi_realm_auth.py  test_new_operators.py  test_openapi.py  test_partitioning.py  test_public_access.py  test_realm_crud.py  test_realm_name_get_sdk.py  test_role_cache.py  test_sdk_access_matrix.py  test_sdk_automation.py  test_sdk_db_mode.py  test_sdk_integration.py  test_sdk_keycloak_config.py  test_sdk_manifest.py  test_sdk_manifest_builder_advanced.py  test_sdk_manifest_fluent.py  test_sdk_manifest_modes.py  test_sdk_naming.py  test_sdk_naming_crud.py  test_spatial_missing.py  test_spatial_scenarios.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  types.ts
ui/src/components/: ACLCreateModal.tsx  ConditionBuilder.tsx  Layout.tsx  ManifestUploadModal.tsx  Modal.tsx  Pagination.tsx  ResourcePickerModal.tsx  Toast.tsx
ui/src/components/realm/: RealmEditForm.tsx  RealmForm.tsx
ui/src/hooks/: useACLs.ts  useActions.ts  useManifest.ts  usePrincipals.ts  useRealms.ts  useResourceTypes.ts  useResources.ts  useRoles.ts
ui/src/pages/: ACLList.tsx  ActionList.tsx  PrincipalList.tsx  RealmDetail.tsx  RealmList.tsx  ResourceList.tsx  ResourceTypeList.tsx  RoleList.tsx
