[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-abac-common"
version = "0.1.0"
description = "Common utilities and services for Stateful ABAC Policy Engine"
requires-python = ">=3.10"
authors = [
    { name = "Myron Gourlis", email = "myrgourlis@gmail.com" },
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.14.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
    "python-keycloak>=3.0.0",
    "apscheduler>=3.10.0",
]

# The package directory is the parent (..) and the package name is "common"
# This way, when installed, imports work as `from common.models import ...`
[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["common"]
namespaces = false

[tool.setuptools.exclude-package-data]
"*" = ["build/*", "*.egg-info/*", "__pycache__/*"]
